tests/suite/fail/generated/types/fail_assign_string_to_i32_5.ny
fn main() {
    let x: i32 = "a" //~ ERROR Type mismatch
    print(0)
}
